# scumbag-indicator

./: .gitignore  README.md
.github/workflows/: windows-release.yml
apps/desktop/: README.md  package.json
apps/desktop/eval/: README.md  seed-cases.js
apps/desktop/scripts/: build-release.sh  evaluate-cases.js  generate-green-hat-icon.py  verify-release.sh
apps/desktop/src/: app.js  desktop-utils.js  detector.js  import-utils.js  index.html  llm-api.js  privacy-utils.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/tests/: desktop-smoke.test.js  detector.test.js  eval-cases.test.js  import-utils.test.js  llm-api.test.js  privacy-utils.test.js
knowledge-base/: README.md  case-expansion-research.md  casebook.md  deep-analysis-methods.md  detector-taxonomy-and-scoring.md  literature-map.md  prompt-output-contract.md  weight-rationale.md
