[package]
name = "ai-zhaman-detector"
version = "0.1.0"
description = "Local-first desktop relationship manipulation pattern analyzer"
authors = ["local"]
edition = "2021"

[lib]
name = "ai_zhaman_detector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.47"
